# hw07-group16

./: .gitignore  LICENSE  Makefile  README.md  busy_time_and_fares_analysis.ipynb  contribution_statement.md  environment.yml  envsetup.sh  location_analysis.ipynb  main.ipynb  requirements.txt  setup.cfg  taxi_clean.ipynb  tip_amt_prediction.ipynb  tip_analysis.ipynb
tables/: fare_per_mile_dropoff.csv  fare_per_mile_pickup.csv  feature_corr.csv  model1coeffs.csv  model2coeffs.csv  total_dropoffs.csv  total_pickups.csv
taxitools/: utils.py
taxitools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
taxitools/tests/: taxitools_tests.py  test_utils.py
