# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = taxitools
version          = attr: taxitools.__version__
author           = Stephanie Trinh, Rohan Goel, Daniel Ho, Xingrui Ye
author_email     = stephanie_trinh@berkeley.edu, rgoel777@berkeley.edu, dho799@berkeley.edu, xyekk826@berkeley.edu
description      = A Python library for analyzing NYC taxi data
long_description = file: README.md
long_description_content_type = text/markdown
keywords         = tools, ligo
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3.9.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3.9.9,
install_requires =
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*